🐛 Fix double scrollbar in PSM code injection editors (#849)
refs TryGhost/Ghost#8896
- PSM code injection editors were suffering from the same issue as the Code Injection screen
- apply the same fix for the PSM editors as was used in #838

--- a/ghost/admin/app/styles/components/settings-menu.css
+++ b/ghost/admin/app/styles/components/settings-menu.css
@@ -209,6 +209,8 @@
 
 .settings-menu-content .CodeMirror-scroll {
     min-height: 170px;
+    overflow: hidden !important;
+    margin-right: 0;
 }
 
 /* Background
